GNOME Bugzilla – Bug 653443
Cannot exit with key shortcut
Last modified: 2011-08-26 14:44:25 UTC
Debian testing x86_64 gnome-control-center 3.0.1.1-1 I cannot exit gnome-control-center with C-w, C-q, or Esc. So far it seems I can only click the X to quit.
Try Alt+F4 for now.
I can confirm this with control center 3.1.3, should be set to NEW.
commit 054f798b16c7d6ca040466df60cfa857a00a353d Author: Bastien Nocera <hadess@hadess.net> Date: Fri Aug 26 15:43:57 2011 +0100 shell: Add Ctrl+Q as a way to exit the shell https://bugzilla.gnome.org/show_bug.cgi?id=653443