shell: Add Ctrl+Q as a way to exit the shell

https://bugzilla.gnome.org/show_bug.cgi?id=653443